--- a/package.json
+++ b/package.json
@@ -11,24 +11,33 @@
     "http-server": "^0.6.1",
     "bower": "^1.3.1",
     "shelljs": "^0.2.6",
-    "karma-junit-reporter": "^0.2.2"
+    "karma-junit-reporter": "^0.2.2",
+    "gulp": "~3.6.2",
+    "gulp-rename": "~1.2.0",
+    "gulp-concat": "~2.2.0",
+    "gulp-uglify": "~0.3.0",
+    "gulp-clean": "~0.2.4",
+    "gulp-minify-css": "~0.3.4",
+    "gulp-autoprefixer": "0.0.7",
+    "gulp-jshint": "~1.6.1",
+    "gulp-cache": "~0.1.11",
+    "gulp-imagemin": "~0.5.0",
+    "gulp-bower-files": "~0.2.3",
+    "gulp-ignore": "~1.1.0",
+    "browser-sync": "~0.9.1",
+    "gulp-sass": "~0.7.1"
   },
   "scripts": {
     "postinstall": "bower install",
-
     "prestart": "npm install",
-    "start": "http-server -a localhost -p 8000",
-
+    "start": "http-server -a localhost -p 8001",
     "pretest": "npm install",
     "test": "karma start test/karma.conf.js",
     "test-single-run": "karma start test/karma.conf.js  --single-run",
-
     "preupdate-webdriver": "npm install",
     "update-webdriver": "webdriver-manager update",
-
     "preprotractor": "npm run update-webdriver",
     "protractor": "protractor test/protractor-conf.js",
-
     "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + cat('app/bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
   }
 }
